--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <html>
+
+<head>
 <title>Acueil</title>
+<link href="css/ligne.css" rel="stylesheet"/></link>
+</head>
+
 <body>
-Hello World
+<h1>Hello World</h1>
 </body>
 </html>
