--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
 <html>
-
 <head>
 <title>Acueil</title>
 <link href="css/ligne.css" rel="stylesheet"/></link>
 </head>
-
 <body>
+<div class="menu">
+    | <a href="index.html"> Acceuil</a>
+    | <a href="contact.html"> Contacts</a>
+
+</div>
 <h1>Hello World</h1>
 </body>
 </html>
