Modification page d'accueil

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>Acueil</title>
+<title>Accueil</title>
 <link href="css/ligne.css" rel="stylesheet"/></link>
 </head>
 <body>
@@ -10,6 +10,7 @@
 
 </div>
 <h1>Hello World</h1>
+<h2>Salut c'est moi</h2>
 </body>
 <div class="copyright">
     ceci est un copyright
